ACOMMONS-82 Make use of features available after Java upgrade (#430)